media/audiobookshelf/resources/abs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ports:
    - name: http
      port: 13378
      protocol: TCP
      targetPort: 80
  selector:
    app: audiobookshelf
